--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_APP_API_URL=http://localhost:8000/
+VITE_APP_API_URL= https://63gfn7h3naskfg4ivxuvpwqxde0mnmnc.lambda-url.ap-southeast-1.on.aws
